<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".lab3.Lab3_control">

    <Spinner
        android:id="@+id/db_version_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/create_db_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCreateDB"
        android:text="@string/create_database" />

    <Button
        android:id="@+id/fill_db_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onFillTestData"
        android:text="@string/fill_database" />

    <Button
        android:id="@+id/clear_db_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClear"
        android:text="@string/clear_db" />

    <EditText
        android:id="@+id/editID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="number"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editFIO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/fio"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editPatronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/patronymic"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/add_to_db_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onAdd"
        android:text="@string/add" />

    <Button
        android:id="@+id/rename_db_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onRename"
        android:text="@string/rename" />

    <Button
        android:id="@+id/show_db_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onDatabase"
        android:text="@string/show_db" />

</LinearLayout>