<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/lab1_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onLab1"
                android:text="@string/lab_1" />

            <Button
                android:id="@+id/lab2_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onLab2"
                android:text="@string/lab_2" />

            <Button
                android:id="@+id/lab3_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onLab3"
                android:text="@string/lab_3" />

            <Button
                android:id="@+id/lab4_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onLab4"
                android:text="@string/lab_4" />

            <Button
                android:id="@+id/lab5_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onLab5"
                android:text="@string/lab_5" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>