<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_marginVertical="0dp"
    android:padding="0dp"
    android:paddingVertical="0dp"
    tools:context=".lab2.Lab2_menu">

    <Button
        android:id="@+id/activity1_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onActivity1"
        android:text="@string/activity_1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/spacer1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.75"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/activity2_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onActivity2"
        android:text="@string/activity_2"
        app:layout_constraintBottom_toTopOf="@+id/spacer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer1"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.75" />

    <Button
        android:id="@+id/activity3_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onActivity3"
        android:text="@string/activity_3"
        app:layout_constraintBottom_toTopOf="@+id/spacer3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer2"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.75" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onExit"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer3"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.75" />

    <Space
        android:id="@+id/spacer1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/activity2_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity1_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.75" />

    <Space
        android:id="@+id/spacer2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/activity3_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity2_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.75" />

    <Space
        android:id="@+id/spacer3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/exit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity3_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>